log
Fri Mar 18 00:31:31 UTC 2022: 
 tests:  0|6
total_score: 0/70
bac1a11
Fri Mar 18 00:32:38 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:37: error: ‘Lista’ undeclared (first use in this function); did you mean ‘List’?
   List * l = (List*) malloc (sizeof(Lista));
                                     ^~~~~
                                     List
list.c:32:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9e2db33
Fri Mar 18 00:32:44 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e8f60ed
Fri Mar 18 00:39:48 UTC 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:36:13: error: ‘l’ undeclared (first use in this function)
      return l;
             ^
list.c:36:13: note: each undeclared identifier is reported only once for each function it appears in
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
831adb6
Fri Mar 18 00:39:55 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
de7f67b
Fri Mar 18 00:41:37 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9390b0c
Fri Mar 18 00:45:00 UTC 2022: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
a2466bd
Fri Mar 18 00:45:27 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
eedf3b4
Fri Mar 18 00:46:09 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e4f146a
Fri Mar 18 00:46:21 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8f4871c
Fri Mar 18 00:47:05 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
076d631
